--- a/terms/en.html
+++ b/terms/en.html
@@ -13,12 +13,20 @@
     h2 { margin-top: 28px; }
     a { text-decoration: underline; }
     .muted { color:#666; font-size:.95rem; }
+    .langbar{display:flex;gap:10px;align-items:center;margin-top:10px}
+    .langbar a{padding:6px 10px;border-radius:8px;text-decoration:none;border:1px solid #ddd}
+    .langbar a.active{font-weight:700;border-color:#999}
   </style>
 </head>
 <body>
   <header>
     <h1>Golf : Mini — Terms of Service</h1>
     <div class="muted">Effective date: 2025-11-11 · Version: 2025-11-11</div>
+    <nav class="langbar">
+      <a href="/Golf-Mini/terms/ko.html">한국어</a>
+      <a class="active" href="/Golf-Mini/terms/en.html">English</a>
+      <a href="/Golf-Mini/terms/ja.html">日本語</a>
+    </nav>
   </header>
 
   <main>
@@ -40,7 +48,7 @@
       (b) The Company <strong>does not directly collect, store, or manage personal data</strong> of users.<br/>
       (c) For ads delivery, <em>Google AdMob SDK</em> may process limited information (e.g., ad identifier, coarse location,
       device information) under Google’s policies/terms. The Company does not control this processing.
-      See the <a href="../privacy/en.html">Privacy Policy</a> for details.
+      See the <a href="/Golf-Mini/privacy/en.html">Privacy Policy</a> for details.
     </p>
 
     <h2>3. Use of the Service</h2>
@@ -57,7 +65,7 @@
       (c) Infringing third-party rights (copyrights, trademarks, etc.).
     </p>
 
-    <h2>5. Disclaimers & Limitation of Liability (Maximum Protection for the Company)</h2>
+    <h2>5. Disclaimers & Limitation of Liability</h2>
     <p>
       (a) The Service is provided <strong>“AS IS”</strong> and <strong>“AS AVAILABLE”</strong> without warranties of any kind,
       express or implied, including merchantability, fitness for a particular purpose, and non-infringement.<br/>
