--- a/terms/ja.html
+++ b/terms/ja.html
@@ -13,12 +13,20 @@
     h2 { margin-top: 28px; }
     a { text-decoration: underline; }
     .muted { color:#666; font-size:.95rem; }
+    .langbar{display:flex;gap:10px;align-items:center;margin-top:10px}
+    .langbar a{padding:6px 10px;border-radius:8px;text-decoration:none;border:1px solid #ddd}
+    .langbar a.active{font-weight:700;border-color:#999}
   </style>
 </head>
 <body>
   <header>
     <h1>Golf : Mini — 利用規約</h1>
     <div class="muted">施行日: 2025-11-11 · バージョン: 2025-11-11</div>
+    <nav class="langbar">
+      <a href="/Golf-Mini/terms/ko.html">한국어</a>
+      <a href="/Golf-Mini/terms/en.html">English</a>
+      <a class="active" href="/Golf-Mini/terms/ja.html">日本語</a>
+    </nav>
   </header>
 
   <main>
@@ -42,7 +50,7 @@
       (b) 当社は<strong>利用者の個人データを直接収集・保存・管理しません</strong>。<br/>
       (c) 広告配信のため、<em>Google AdMob SDK</em> が限定的な情報（広告 ID、概略位置、端末情報 等）を
       Google のポリシー・利用規約に基づき処理する場合があります。当社は当該処理を直接管理しません。
-      詳細は <a href="../privacy/ja.html">プライバシーポリシー</a> を参照してください。
+      詳細は <a href="/Golf-Mini/privacy/ja.html">プライバシーポリシー</a> を参照してください。
     </p>
 
     <h2>3. サービス利用</h2>
@@ -59,7 +67,7 @@
       (c) 第三者の権利（著作権・商標等）を侵害する行為
     </p>
 
-    <h2>5. 免責および責任制限（当社の最大限の保護）</h2>
+    <h2>5. 免責および責任制限</h2>
     <p>
       (a) 本サービスは<strong>「現状有姿（AS IS）」</strong>および<strong>「提供可能な状態（AS AVAILABLE）」</strong>で提供され、
       商品性・特定目的適合性・非侵害性を含むいかなる明示・黙示の保証も行いません。<br/>
