--- a/privacy/ko.html
+++ b/privacy/ko.html
@@ -14,12 +14,20 @@
     a { text-decoration: underline; }
     .muted { color:#666; font-size:.95rem; }
     ul { padding-left: 1.2em; }
+    .langbar{display:flex;gap:10px;align-items:center;margin-top:10px}
+    .langbar a{padding:6px 10px;border-radius:8px;text-decoration:none;border:1px solid #ddd}
+    .langbar a.active{font-weight:700;border-color:#999}
   </style>
 </head>
 <body>
   <header>
     <h1>Golf : Mini 개인정보처리방침</h1>
     <div class="muted">시행일: 2025-11-11 · 버전: 2025-11-11</div>
+    <nav class="langbar">
+      <a class="active" href="/Golf-Mini/privacy/ko.html">한국어</a>
+      <a href="/Golf-Mini/privacy/en.html">English</a>
+      <a href="/Golf-Mini/privacy/ja.html">日本語</a>
+    </nav>
   </header>
 
   <main>
@@ -40,14 +48,14 @@
         광고 제공 과정에서 Google(및 파트너)은 광고 식별자(AAID), 대략적 위치,
         디바이스 정보, IP 기반 지역 정보, 광고 성과 지표 등의 정보를 처리할 수 있습니다.
         이 처리는 Google의 정책과 약관에 따르며, 회사는 해당 처리에 직접 관여하지 않습니다.
-        자세한 내용: <a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener">Google 광고 정책</a>, 
+        자세한 내용: <a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener">Google 광고 정책</a>,
         <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google 개인정보처리방침</a></li>
     </ul>
 
     <h2>2. 처리 목적</h2>
     <ul>
       <li>광고 노출 및 광고 성과 측정(제3자: Google AdMob)</li>
-      <li>게임 품질 유지(예: 충돌 로그는 OS/스토어 시스템 수준에서 수집될 수 있으며 회사는 직접 식별하지 않습니다)</li>
+      <li>게임 품질 유지(예: OS/스토어 수준의 충돌 보고 — 회사가 직접 식별하지 않음)</li>
     </ul>
 
     <h2>3. 보관 및 파기</h2>
@@ -67,8 +75,8 @@
     <h2>5. 이용자 선택권</h2>
     <ul>
       <li>안드로이드 설정에서 광고 식별자 재설정/삭제 및 맞춤형 광고 제한을 할 수 있습니다.</li>
-      <li>일부 지역(예: EEA)에서는 앱 최초 실행 시/설정에서 <em>광고 동의(UMP)</em> 옵션을 제공할 수 있으며,
-          앱 내 “개인정보 옵션” 버튼을 통해 재설정이 가능합니다(지원 지역에 한함).</li>
+      <li>일부 지역(예: EEA)에서는 앱 최초 실행 시 또는 앱 내 <em>개인정보 옵션(UMP)</em>을 통해
+          광고 동의를 관리할 수 있습니다(지원 지역에 한함).</li>
     </ul>
 
     <h2>6. 아동</h2>
@@ -79,7 +87,7 @@
 
     <h2>7. 보안</h2>
     <p>
-      회사는 서버를 운영하지 않으며, 기기 내 저장되는 비식별 데이터 범위의 최소화를 통해 위험을 낮추고 있습니다.
+      회사는 서버를 운영하지 않으며, 기기 내 저장되는 비식별 데이터 범위를 최소화합니다.
       광고 데이터의 보안은 Google 등 제3자의 정책과 시스템에 따릅니다.
     </p>
 
@@ -99,6 +107,7 @@
     <h2>10. 연락처</h2>
     <p>
       이메일: <a href="mailto:designfuturegames.cs@gmail.com">designfuturegames.cs@gmail.com</a><br/>
+      (1인 개발자 운영)
     </p>
 
     <p class="muted">
@@ -106,7 +115,7 @@
     </p>
 
     <p>
-      이용약관: <a href="../terms/ko.html">바로 가기</a>
+      이용약관: <a href="/Golf-Mini/terms/ko.html">바로 가기</a>
     </p>
   </main>
 
