--- a/privacy/ja.html
+++ b/privacy/ja.html
@@ -14,12 +14,20 @@
     a { text-decoration: underline; }
     .muted { color:#666; font-size:.95rem; }
     ul { padding-left: 1.2em; }
+    .langbar{display:flex;gap:10px;align-items:center;margin-top:10px}
+    .langbar a{padding:6px 10px;border-radius:8px;text-decoration:none;border:1px solid #ddd}
+    .langbar a.active{font-weight:700;border-color:#999}
   </style>
 </head>
 <body>
   <header>
     <h1>Golf : Mini — プライバシーポリシー</h1>
     <div class="muted">施行日: 2025-11-11 · バージョン: 2025-11-11</div>
+    <nav class="langbar">
+      <a href="/Golf-Mini/privacy/ko.html">한국어</a>
+      <a href="/Golf-Mini/privacy/en.html">English</a>
+      <a class="active" href="/Golf-Mini/privacy/ja.html">日本語</a>
+    </nav>
   </header>
 
   <main>
@@ -108,7 +116,7 @@
     </p>
 
     <p>
-      利用規約: <a href="../terms/ja.html">こちら</a>
+      利用規約: <a href="/Golf-Mini/terms/ja.html">こちら</a>
     </p>
   </main>
 
